fix duplicated width and text align properties

--- a/src/pages/NotFound/NotFound.css
+++ b/src/pages/NotFound/NotFound.css
@@ -8,7 +8,6 @@
   margin-top: 64px;
   margin-left: auto;
   margin-right: auto;
-  width: 50%;
 }
 
 .error-container__text__button {
@@ -33,7 +32,7 @@
   text-align: center;
   font-weight: 400;
   margin: 24px 29px 0px 29px;
-  text-align: center;
+
   font-size: 1.125rem;
   line-height: 1.313rem;
 }
